<resources>
    <string name="app_name">nHealth</string>
    <string name="retry">Retry</string>
    <string name="app_error_unknown_error">Unknown Error</string>
    <string name="app_user_photo">user photo</string>
    <string name="app_user_name">user name</string>
    <string name="app_not_synced">Not synced</string>
    <string name="app_warning">Warning</string>
    <string name="app_confirmation">Confirmation</string>
    <string name="app_button_please_select_reason">Please select reason</string>
    <string name="app_error_valid_phone">Please enter valid phone number</string>
    <string name="app_error_gender">Please select gender</string>
    <string name="app_error_reason">Please specify reason</string>
    <string name="app_error_attent_or_not">Please select if the member can attend the screening</string>
    <string name="app_error_yes_or_no">Please select yes or no</string>
    <string name="app_error_please_select_one">Please select one</string>
    <string name="app_error_valid_email">Please enter valid email address</string>
    <string name="app_button_accept_and_proceed">Accept and proceed</string>
    <string name="app_secondary_contact_number">Secondary contact number (Optional)</string>
    <string name="app_primary_contact_number">Primary contact number</string>
    <string name="app_field_preferred_name">Preferred name (if available)</string>
    <string name="app_field_family_name">Family name</string>
    <string name="app_field_first_name">First/Given name(s)</string>
    <string name="app_continue">continue</string>
    <string name="app_button_go_to_home">Go to home</string>
    <string name="app_button_confirm">Confirm</string>
    <string name="app_button_back_to_home">back to home</string>
    <string name="app_button_submit">submit</string>
    <string name="app_continue_to_next_participant">continue to next participant</string>
    <string name="app_scan_the_barcode_of_the_participant">Scan the barcode of the participant to verify the participant and continue</string>
    <string name="app_button_manual_entry">MANUAL ENTRY</string>
    <string name="app_guide">Guide</string>
    <string name="app_button_go_back">GO BACK</string>
    <string name="app_scan_participant_barcode">Scan participant’s barcode</string>
    <string name="app_button_ok">Ok</string>
    <string name="app_button_proceed">Proceed</string>
    <string name="app_scan_barcode">Scan Barcode</string>
    <string name="app_age">Age</string>
    <string name="app_logout_confirm">Are you sure you want to log out?</string>
    <string name="app_logout_button">Logout</string>
    <string name="app_screening_checklist_reminder">Make sure to sign the participant screening checklist card</string>
    <string name="app_login_userid">Phone number or Email address</string>
    <string name="app_1_preparation">1. Preparation</string>
    <string name="app_3_measurements">3. Measurements</string>
    <string name="app_scan_qr_code_title">Scan QR Code</string>
    <string name="app_button_sucessfully_complete">succesfully complete</string>
    <string name="app_manual_entry_field_participant_id">Enter participant ID</string>
    <string name="app_back_to_barcode_scanner">back to scanner</string>
    <string name="app_button_accept_and_continue">Accept and continue</string>
    <string name="app_gender">Gender</string>
    <string name="app_gender_female">Female</string>
    <string name="app_gender_male">Male</string>
    <string name="app_gender_other">Other</string>
    <string name="app_dob">Date of Birth</string>
    <string name="app_or">Or</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="app_Finish">Finish</string>
    <string name="app_contact_no">Contact number</string>
    <string name="app_contact_no_optional">Contact number (optional)</string>
    <string name="screening">Screening</string>
    <string name="screening_biological_samples">Biological samples</string>
    <string name="screening_hlq">Health and lifestyle questionnaire</string>
    <string name="screening_register_participant">Register participant</string>
    <string name="screening_body_measurements">Body measurements</string>
    <string name="screening_language_title">Language</string>
    <string name="screening_language_english">English</string>
    <string name="screening_language_bengali">বাংলা</string>
    <string name="screening_language_hindi">हिंदी</string>
    <string name="screening_language_urdu">اردو</string>
    <string name="fundoscopy">Funduscopy</string>
    <string name="ecg">Electrocardiography (ECG)</string>
    <string name="pathology">Pathology</string>
    <string name="medical_report">Medical review/reports</string>
    <string name="search_hint">search repositories</string>
    <string name="repo_full_name" translatable="false"><b>%s</b>/%s</string>
    <string name="member_full_name" translatable="false"> %s %s </string>
    <string name="pending_sample" >Pending samples list (%s)</string>
    <string name="empty_search_result">No results for <b>%s</b></string>
    <string name="a11y_contributor_avatar">contributor avatar</string>
    <string name="navigation_drawer_header_content_description">Navigation Header</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="spirometry">Spirometry</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="login">Login</string>
    <string name="passowrd_reg_error">Invalid password. Your password should contain at least one uppercase letter, one lowercase letter, one number digit and one special character.</string>
    <string name="custom_error_max_max_length">Invalid password. Your password must be between 8 and 30 characters.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="synced">Synced</string>
    <string name="enumeration">Enumeration</string>
    <string name="enumeration_new_household_visit">new household visit</string>
    <string name="enumeration_household_visit_title">Household visit</string>
    <string name="enumeration_explanation_permission_title">Consent</string>
    <string name="enumeration_household_visit_button_geolocation">Register geolocation data</string>
    <string name="enumeration_field_address">Address</string>
    <string name="enumeration_field_area_village_district">Village name ( if applicable )</string>
    <string name="enumeration_explanation_permission_subtitle">Please make sure you explain the following to the participant.</string>
    <string name="enumeration_explanation_permission_point_1">We will be collecting some basic information about you and your household members.</string>
    <string name="enumeration_explanation_permission_point_2">We would like to invite household members who are eligible to come for health screening and participate in study</string>
    <string name="enumeration_household_members_notice">Only the members whose profiles are completed are eligible for participation in the study. If you are done adding all eligible members,  proceed to assign ID.</string>
    <string name="enumeration_explanation_permission_consent"><![CDATA[<b>Ask the respondent: </b>"Do you accept sharing your household information with us?"]]></string>
    <string name="enumeration_assign_invitation_id_to_household_instruction">Stick an unassigned pre-printed Invitation ID QR code onto appointment cards and scan the QR code</string>
    <string name="enumeration_title_add_member">Add a household member</string>
    <string name="enumeration_field_nickname">Nickname (if available)</string>
    <string name="enumeration_contact_primary">Is this person going to be the primary contact?</string>
    <string name="enumeration_provider">Source of this information</string>
    <string name="enumeration_button_direct">Direct</string>
    <string name="enumeration_button_contact">Via Contact</string>
    <string name="enumeration_attend_screening_on_proposed_dates_question">Is participant able to attend screening on proposed dates?</string>
    <string name="enumeration_state_reason">Please state the reason</string>
    <string name="enumeration_state_reason_option_1">Unavailable during screening dates</string>
    <string name="enumeration_state_reason_option_2">Serious illness</string>
    <string name="enumeration_state_reason_field_other">Please specify</string>
    <string name="enumeration_no_member">No unregistered members found</string>
    <string name="enumeration_unavailable">Unavailable during the screening dates</string>
    <string name="enumeration_location_not_available">Location data not available</string>
    <string name="enumeration_explanation_permission_explainer_video">Explainer videos</string>
    <string name="enumeration_explanation_permission_modal_button_cancel">CANCEL AND GO TO START</string>
    <string name="enumeration_add_a_household_member_title">Add a household member</string>
    <string name="enumeration_serious_illness">Serious illness</string>
    <string name="enumeration_contact_optional">* Optional if this person is not the primary contact</string>
    <string name="enumeration_household_members_above_18">Are there any other members above the age of 18 years in the household?</string>
    <string name="enumeration_confirm_assign_id">confirm and assign ID</string>
    <string name="enumeration_manual_invitation_id">Enter Invitation ID</string>
    <string name="enumeration_button_assign_invitation_id">ASSIGN INVITATION ID</string>
    <string name="enumeration_household_members_confirmation_notice1">Are you sure that you are done adding all the household members above the age of   18?</string>
    <string name="enumeration_household_members_confirmation_notice2">Only the members whose profiles are completed are eligible for the participation in the study.</string>
    <string name="enumeration_confirmation_button_assign_id">assign ID</string>
    <string name="enumeration_confirmation_button_add_member">add member</string>
    <string name="enumeration_field_postcode">Postcode</string>
    <string name="enumeration_invitation_id_assigned_title">Invitation ID handover</string>
    <string name="enumeration_invitation_id_assigned">Invitation ID assigned</string>
    <string name="enumeration_invitation_id_handover_button_finish">finish enumeration</string>
    <string name="enumeration_primary_contact">Primary Contact</string>
    <string name="enumeration_set_primary_contact">Set as primary</string>
    <string name="fundus_failure_details">Failure details</string>
    <string name="fundus_failure_machine">Machine</string>
    <string name="string_station">Station</string>
    <string name="string_more">More</string>
    <string name="raw_data_title">Raw data:</string>
    <string name="ad_structure_details_title">Details:</string>
    <string name="ad_structure_length">LEN</string>
    <string name="ad_structure_type">TYPE</string>
    <string name="ad_structure_value">VALUE</string>
    <string name="side_menu_data_management">Data management</string>
    <string name="settings">Settings</string>
    <string name="patient">Participant</string>
    <string name="comments_notes_optional">Comments/Notes (Optional)</string>
    <string name="string_home">Home</string>
    <string name="fundus_machine_technical_issue">Machine technical issue</string>
    <string name="fundus_machine_not_available">Machine not available / power outage</string>
    <string name="fundus_participant_eye_issue">Participant eye issue / cataract</string>
    <string name="fundus_participant_refused">Participant refused</string>
    <string name="fundus_participant_unable_to_sit">Participant unable to sit / remain still</string>
    <string name="fundus_Other">Other</string>
    <string name="fundus_other_reason">Please enter other reason</string>
</resources>