<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">

        <item
        android:id="@+id/homeEmumerationListFragment"
        android:icon="@drawable/ic_icon_enumeration"
        android:title="@string/string_home" />
        <item
            android:id="@+id/dataManagementListFragment"
            android:icon="@drawable/ic_icon_data"
            android:title="@string/side_menu_data_management" />
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/deviceManaFragment"-->
            <!--android:icon="@drawable/ic_icon_devices_menu"-->
            <!--android:title="@string/device_management" />-->

        <item
            android:id="@+id/userSettingFragment"
            android:icon="@drawable/ic_icon_settings_menu"
            android:title="@string/settings" />

        <item
            android:id="@+id/logoutDialogFragment"
            android:icon="@drawable/ic_icon_logout"
            android:title="@string/app_logout_button" />
    </group>


</menu>