<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="org.southasia.ghru.SettingActivity"
        tools:ignore="MergeRootFrame">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/setting"
                app:titleTextColor="@color/white" />


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_32"
                android:text="@string/screening_language_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <RadioButton
                    android:id="@+id/radioButtonEng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/radio_selector"
                    android:checked="true"
                    android:paddingStart="18dp"
                    android:paddingEnd="18sp"
                    android:text="@string/screening_language_english"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButtonBengali"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:button="@drawable/radio_selector"
                    android:paddingStart="18dp"
                    android:paddingEnd="18sp"
                    android:text="@string/screening_language_bengali"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButtonHindi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:button="@drawable/radio_selector"
                    android:paddingStart="18dp"
                    android:paddingEnd="18sp"
                    android:text="@string/screening_language_hindi"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButtonUrdu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:button="@drawable/radio_selector"
                    android:paddingStart="18dp"
                    android:paddingEnd="18sp"
                    android:text="@string/screening_language_urdu"
                    android:textSize="20sp" />
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>