<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <import type="org.southasia.ghru.ui.fundoscopy.reading.reason.ReasonDialogViewModel" />

        <variable
            name="viewModel"
            type="org.southasia.ghru.ui.fundoscopy.reading.reason.ReasonDialogViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_24"
                android:paddingEnd="@dimen/margin_24">

                <TextView
                    style="@style/TextAppearance.Text.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_32"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/fundus_failure_details"
                    android:textColor="#000000"
                    android:textSize="@dimen/default_font_size" />

                <TextView
                    android:id="@+id/textViewError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:textColor="@color/red"
                    android:visibility="gone" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_32"
                    android:background="@drawable/ic_seperator" />

                <RadioGroup
                    android:id="@+id/radioGroupProblemEye"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioButtonLeftEye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_24"
                        android:layout_marginRight="@dimen/margin_20"
                        android:button="@drawable/radio_button"
                        android:fontFamily="@font/roboto"
                        android:paddingStart="12dp"
                        android:text="@string/fundus_machine_technical_issue"
                        android:textSize="21sp" />

                    <RadioButton
                        android:id="@+id/radioButtonRightEye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_24"
                        android:layout_marginRight="@dimen/margin_20"
                        android:button="@drawable/radio_button"
                        android:fontFamily="@font/roboto"
                        android:paddingStart="12dp"
                        android:text="@string/fundus_machine_not_available"
                        android:textSize="21sp" />

                    <RadioButton
                        android:id="@+id/radioButtonBothEyes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_24"
                        android:layout_marginRight="@dimen/margin_20"
                        android:button="@drawable/radio_button"
                        android:fontFamily="@font/roboto"
                        android:paddingStart="12dp"
                        android:text="@string/fundus_participant_eye_issue"
                        android:textSize="21sp" />

                    <RadioButton
                        android:id="@+id/radioButtonRefused"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_24"
                        android:layout_marginRight="@dimen/margin_20"
                        android:button="@drawable/radio_button"
                        android:fontFamily="@font/roboto"
                        android:paddingStart="12dp"
                        android:text="@string/fundus_participant_refused"
                        android:textSize="21sp" />

                    <RadioButton
                        android:id="@+id/radioButtonUnableToSit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_24"
                        android:layout_marginRight="@dimen/margin_20"
                        android:button="@drawable/radio_button"
                        android:fontFamily="@font/roboto"
                        android:paddingStart="12dp"
                        android:text="@string/fundus_participant_unable_to_sit"
                        android:textSize="21sp" />


                    <RadioButton
                        android:id="@+id/radioButtonOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_24"
                        android:layout_marginRight="@dimen/margin_20"
                        android:button="@drawable/radio_button"
                        android:fontFamily="@font/roboto"
                        android:paddingStart="12dp"
                        android:text="@string/fundus_Other"
                        android:textSize="21sp"
                        android:visibility="gone"/>
                </RadioGroup>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/OtherNote"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="@dimen/margin_24"
                    android:background="@drawable/ic_comment_background"
                    android:hint="@string/fundus_other_reason"
                    android:gravity="top|start"
                    android:inputType="textCapWords|textCapSentences|textPersonName"
                    android:padding="24dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/enum_hint_color"
                    android:textSize="@dimen/default_font_size"
                android:visibility="gone"/>

                <RadioGroup
                    android:id="@+id/radioGroupProblemWith"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/radioButtonParticipant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_24"
                        android:layout_marginRight="@dimen/margin_20"
                        android:button="@drawable/radio_button"
                        android:fontFamily="@font/roboto"
                        android:paddingStart="12dp"
                        android:text="@string/patient"
                        android:textSize="21sp" />

                    <RadioButton
                        android:id="@+id/radioButtonMachine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_24"
                        android:layout_marginRight="@dimen/margin_20"
                        android:button="@drawable/radio_button"
                        android:fontFamily="@font/roboto"
                        android:paddingStart="12dp"
                        android:text="@string/fundus_failure_machine"
                        android:textSize="21sp" />




                </RadioGroup>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/margin_24"
                    android:background="@drawable/ic_comment_background"
                    android:gravity="top|start"
                    android:hint="@string/comments_notes_optional"
                    android:inputType="textCapWords|textCapSentences|textPersonName"
                    android:padding="24dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/enum_hint_color"
                    android:textSize="@dimen/default_font_size" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginBottom="@dimen/margin_32"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/buttonAcceptAndContinue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/ic_button_fill_primary"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/app_button_go_to_home"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_font_size" />

                    <Button
                        android:id="@+id/buttonCancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_button_revisited_household"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:paddingStart="@dimen/twenty_one_dp"
                        android:text="@string/app_button_go_back"
                        android:textColor="@color/defult_blue"
                        android:textSize="@dimen/default_font_size" />

                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>


</layout>